Cleaned up the ProductInfo component. Fixed vertical and horizontal spacing and added add-on box

--- a/public/styles.css
+++ b/public/styles.css
@@ -20,66 +20,62 @@ body {
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 65% 35%;
+  display: flex;
+
 }
 
 .grid-item {
   font-size: 50px;
   font-family: BogleRegular;
 }
-
+/*
 .productInfo {
-  display: grid;
-  grid-column: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "Title"
-    "Info"
-    "Blank"
-    "Price"
-    "MoreBlank"
-    "Availablility";
-}
+
+} */
 
 .productDescriptionTitle {
   font-size: 22px;
   font-weight: bold;
-  padding: 5px;
   color: black;
   font-family: BogleBold;
+  margin-bottom:5px;
 
 }
 
 .productDescriptionMetrics {
   display: flex;
   font-size: 12px;
-
+  margin-bottom:2.5em;
 }
 
 .stars {
-  font-weight: 200;
+  margin-right: 1em;
 }
 
 .empty {
-  color:rgb(253, 247, 247);
+  color:rgb(218, 218, 218);
 }
 
 .rating {
+  display: inline-block;
+  margin-right: 1em;
   color: gray;
 }
 
 .ratingAmount {
   text-decoration: underline;
+  margin-right: 1em;
+
 }
 
 .commentsAmount {
   text-decoration: underline;
+  margin-right: 1em;
+
 }
 
 .storeSerial {
   color: gray;
-
 }
 
 .price {
@@ -95,6 +91,16 @@ body {
   font-size: 14px;
   color: red;
   font-weight: bold;
+  font-family: BogleBold;
+}
+
+.addOns {
+  border: solid 1px gray;
+  font-size: 12px;
+}
+
+.addOnHeader {
+  font-size: 14px;
   font-family: BogleBold;
 }
 
